Moving social share buttons inside the container so it looks nicely aligned

--- a/source/stylesheets/_config.scss
+++ b/source/stylesheets/_config.scss
@@ -37,7 +37,7 @@ figure.impression {
 // Social share links for each article
 article .nav__social {
 	float: none;
-	padding: 5% 0 0 5%;
+	padding: 5% 0 1% 0;
 
 	a {
 		font-family: 'Montserrat', Verdana, Arial, sans-serif;
