remove unused variables

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -25,8 +25,7 @@
          url_prefix: "<%= url_prefix %>",
          app_name : "<%= app_name %>",
          host_name: "<%= absolute_prefix %>",
-         twitter_name: "<%= twitter %>",
-         current_url: "<%= absolute_prefix + url_prefix %>"
+         twitter_name: "<%= twitter %>"
        };
 
       // A nice place holder for google analytics things
