renamed absolute_prefix to url_host

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -24,7 +24,7 @@
       App.Context = {
          url_prefix: "<%= url_prefix %>",
          app_name : "<%= app_name %>",
-         host_name: "<%= absolute_prefix %>",
+         host_name: "<%= url_host %>",
          twitter_name: "<%= twitter %>"
        };
 
