--- a/source/partials/_week_template.html.erb
+++ b/source/partials/_week_template.html.erb
@@ -1,4 +1,4 @@
-<% absolute_page_url = absolute_prefix + url_prefix + (slug == "week-0" ? '/' : slug) %>
+<% absolute_page_url = url_host + url_prefix + (slug == "week-0" ? '/' : slug) %>
 <% page_title = doc.detect{|row| row.kind == "video"}.try(:title) || '' %>
 
 <article class="<%= slug == active_slug ? 'active' : 'hidden' %>"
