modified social and fixed layout typo

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -60,5 +60,6 @@
 
   </body>
   <%= partial 'partials/analytics' %>
-  <%= javascript_include_tag  "jquery-2.1.0.min", "script", "social" %>
+  <%= javascript_include_tag  "jquery-2.1.0.min", 'update_url', "pixel_tracker","open_graph", "social","base" %>
+
 </html>
