--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -60,6 +60,6 @@
 
   </body>
   <%= partial 'partials/analytics' %>
-  <%= javascript_include_tag  "jquery-2.1.0.min", 'update_url', "pixel_tracker","open_graph", "social","base" %>
+  <%= javascript_include_tag  "jquery-2.1.0.min", 'update_url','ooyala-video','analytics',"pixel_tracker", "social","base" %>
 
 </html>
