--- a/source/partials/_social_share.html.erb
+++ b/source/partials/_social_share.html.erb
@@ -1,15 +1,20 @@
-<% share_text ||= default_share_text
+<% # THESE SHOULD BE PASSED IN TO THE PARTIAL!!!!
+   share_text ||= default_share_text
    share_url ||= url_host + url_prefix
    share_url.gsub!(/\/\/$/,'/')
+
+   twitter_url = "https://twitter.com/share?url=#{CGI.escape(share_url)}&amp;text=#{CGI.escape(share_text)}"
+   facebook_url = "https://www.facebook.com/sharer/sharer.php?u=#{CGI.escape(share_url)}"
+   google_plus_url = "https://plus.google.com/share?url=#{CGI.escape(url)}"
 %>
 <div class="nav__social">
-  <a class="nav__social__link" data-share-via="twitter" data-shared="<%= app_name %>"href="<%= tweet(share_url,share_text) %>">
+  <a class="nav__social__link" data-share-via="twitter" data-shared="<%= app_name %>" href="<%= twitter_url %>">
     <svg class="nav__social__icon svg-icon twitter" viewBox="0 0 100 100"><use xlink:href="#twitter"></use></svg>
   </a>
-  <a class="nav__social__link" data-share-via="facebook" data-shared="<%= app_name %>" href="<%= facebook(share_url) %>">
+  <a class="nav__social__link" data-share-via="facebook" data-shared="<%= app_name %>" href="<%= facebook_url %>">
     <svg class="nav__social__icon svg-icon facebook" viewBox="0 0 100 100"><use xlink:href="#facebook"></use></svg>
   </a>
-  <a class="nav__social__link" data-share-via="googleplus" data-shared="<%= app_name %>" href="<%= google_plus(share_url) %>">
+  <a class="nav__social__link" data-share-via="googleplus" data-shared="<%= app_name %>" href="<%= google_plus_url %>">
     <svg class="nav__social__icon svg-icon googleplus" viewBox="0 0 100 100"><use xlink:href="#google-plus"></use></svg>
   </a>
 </div>
