Fixing visual conflict with ad countdown

--- a/source/stylesheets/_config.scss
+++ b/source/stylesheets/_config.scss
@@ -121,6 +121,11 @@ article .nav__social {
 
 }
 
+// Hiding the ads countdown overlay
+.oo_ads_countdown {
+  display: none;
+}
+
 @import "lib/svg";
 @import "lib/footer";
 @import "lib/slider";
