fixes share links

--- a/source/main.html.erb
+++ b/source/main.html.erb
@@ -1,4 +1,4 @@
-<!-- Loop through all the weeks and build them here -->
+<%# Loop through all the weeks and build them here -- %>
 <% active_slug ||= 'week-0'
   weeks ||= locals[:weeks] || []
 
