combines js together

--- a/source/javascripts/base.js.erb
+++ b/source/javascripts/base.js.erb
@@ -1,3 +1,9 @@
+//= require 'jquery-2.1.0.min'
+//= require 'analytics'
+//= require 'ooyala-video'
+//= require 'social'
+//= require 'update_url'
+
 (function($){
   var $articles = $('article');
   var $activeArticle = $('article.active');
