Cleaning up stylesheets

--- a/source/stylesheets/lib/_figures.scss
+++ b/source/stylesheets/lib/_figures.scss
@@ -81,6 +81,42 @@ figure {
   padding: 5% 0 3.3% 0;
 }
 
+// Logo after CTA
+.action::after {
+  content: ' ';
+  display: inline-block;
+  float: right;
+  background: image-url($byline-sponsor-logo) center no-repeat;
+  width: 97px;
+  height: 31px;
+}
+
+// "Overlay" styling
+figure.overlay .action:after {
+  background: image-url($sponsor-logo) center no-repeat;
+  background-size: contain;
+}
+
+@media (min-width: 50em) {
+  figure.overlay {
+    &:before {
+      background: none;
+    }
+    h3, .action {
+      color: $background;
+    }
+    p {
+      color: white;
+    }
+    .figure-content {
+      width: 50%;
+      background-color: $primary;
+      padding: 2% 5% 4% 5%;
+      margin: 0 0 3em 0;
+    }
+  }
+}
+
 figure.left, figure.left_quote {
   @media (min-width: $figure-break) {
     img {
@@ -160,5 +196,68 @@ figure.next {
   }
   .figure-content {
     padding: 2em $container-padding;
+  }
+}
+
+// Border for images
+.lede, img {
+  border-bottom: 4px solid $primary;
+}
+
+// Impression trackers should have no spacing
+figure.impression {
+  margin: 0;
+}
+
+// Pull quotes styling
+// h2 is the quote
+.right_quote {
+  p { float: left; }
+  h2 {
+    float: right;
+  }
+}
+
+.left_quote {
+  p { float: right; }
+  h2 { 
+    float: left;
+  }
+}
+
+.right_quote, .left_quote {
+  margin: 2.5em 0;
+
+  &:before, &:after {
+    content: " ";
+    display: table;
+  }
+  &:after {
+    clear: both;
+  }
+
+  p {
+    font-family: $text-font;
+    color: $text;
+    width: 47%;
+    margin: 0;
+    @media (max-width: 30em) {
+      display: block;
+      width: 100%;
+      margin-top: 1em;
+    }
+  }
+
+  h2 {
+    font-family: $headline-font;
+    color: $primary;
+    font-size: $font-size * 1.5;
+    line-height: $line-height;
+    width: 47%;
+    @media (max-width: 30em) {
+      font-size: $font-size;
+      display: block;
+      width: 100%;
+    }
   }
 }
