--- a/source/stylesheets/style2.scss
+++ b/source/stylesheets/style2.scss
@@ -1,58 +1,3 @@
-// Global variables
-// Colors
-$primary: #0073c3;
-$background: #fff9f3;
-$text: #555;
-
-// Typography
-$headline-font: Verdana, sans-serif;
-$headline-weight: normal;
-$text-font: Verdana, sans-serif;
-$text-weight: normal;
-$font-size: 16px;
-$line-height: 1.5;
-
-// Add custom fonts here
-// @font-face {
-//   font-family: ;
-//   font-weight: ;
-//   src: image-url(" ");
-// }
-
-// Nav
-$nav-color: #fff;
-$nav-background: $primary;
-
-// Sponsor logo (30px tall)
-// must be in images dir
-$sponsor-logo: "Intel-Logo-White.png";
-$byline-sponsor-logo: "intel-logo-blue.png";
-
 @import "config";
 
-@media (min-width: 50em) {
-  figure.overlay {
-    &:before {
-      background: none;
-    }
-    h3, .action {
-      color: $background;
-    }
-    p {
-      color: white;
-    }
-    .figure-content {
-      width: 50%;
-      background-color: $primary;
-      padding: 2% 5% 4% 5%;
-      margin: 0 0 3em 0;
-    }
-  }
-}
-
-.slider h1 {
-  font-weight: 300;
-  @media (min-width: 50em) {
-    font-size: 10vw;
-  }
-}
+// One-off styling goes here
