--- a/source/stylesheets/_config.scss
+++ b/source/stylesheets/_config.scss
@@ -1,5 +1,7 @@
 @import "compass";
 
+// GLOBAL VARIABLES GO IN THIS STYLESHEET
+
 // Associated Vertical
 $vertical: verge; // sbn, verge, polygon
 
@@ -10,121 +12,34 @@ $max-width: 70em;
 // Iconography
 $play-icon-links: true;
 
-// Logo after CTA
-.action::after {
-  content: ' ';
-  display: inline-block;
-  float: right;
-  background: image-url($byline-sponsor-logo) center no-repeat;
-  width: 97px;
-  height: 31px;
-}
+// Colors
+$primary: #0073c3;
+$background: #fff9f3;
+$text: #555;
 
-figure.overlay .action:after {
-	background: image-url($sponsor-logo) center no-repeat;
-	background-size: contain;
-}
+// Typography
+$headline-font: Verdana, sans-serif;
+$headline-weight: normal;
+$text-font: Verdana, sans-serif;
+$text-weight: normal;
+$font-size: 16px;
+$line-height: 1.5;
 
-.svg-icon {
-  &:hover { opacity: .8; transition: opacity .3s }
-}
+// Add custom fonts here
+// @font-face {
+//   font-family: ;
+//   font-weight: ;
+//   src: image-url(" ");
+// }
 
-// Border for images
-.lede, img {
-  border-bottom: 4px solid $primary;
-}
+// Nav
+$nav-color: #fff;
+$nav-background: $primary;
 
-// Pull quotes styling
-// h2 is the quote
-.right_quote {
-	p { float: left; }
-	h2 {
-		float: right;
-	}
-}
-
-.left_quote {
-	p { float: right; }
-	h2 { 
-		float: left;
-	}
-}
-
-.right_quote, .left_quote {
-	margin: 2.5em 0;
-
-	&:before, &:after {
-		content: " ";
-		display: table;
-	}
-	&:after {
-		clear: both;
-	}
-
-	p {
-		font-family: $text-font;
-		color: $text;
-		width: 47%;
-		margin: 0;
-		@media (max-width: 30em) {
-			display: block;
-			width: 100%;
-			margin-top: 1em;
-		}
-	}
-
-	h2 {
-		font-family: $headline-font;
-		color: $primary;
-		font-size: $font-size * 1.5;
-		line-height: $line-height;
-		width: 47%;
-		@media (max-width: 30em) {
-			font-size: $font-size;
-			display: block;
-			width: 100%;
-		}
-	}
-}
-
-// Impression trackers should have no spacing
-figure.impression {
-	margin: 0;
-}
-
-// Social share links for each article
-article .nav__social {
-	float: none;
-	padding: 5% 0 1% 0;
-
-	a {
-		font-family: 'Montserrat', Verdana, Arial, sans-serif;
-		text-decoration: none;
-		color: #555;
-		text-transform: uppercase;
-		font-size: 12px;
-
-		&:hover { text-decoration: none; opacity: 0.8; }
-	}
-
-	.nav__social__link {
-		margin-right: 1.3em;
-
-		&:hover { border-bottom: none; }
-	}
-
-	.nav__social__icon { margin: 0 0.3em 0 0; vertical-align: middle; }
-
-	.nav__social__icon.twitter { fill: #55acee; }
-	.nav__social__icon.facebook { fill: #3b5998; }
-	.nav__social__icon.googleplus { fill: #dd4b39; }
-
-}
-
-// Hiding the ads countdown overlay
-.oo_ads_countdown {
-  display: none;
-}
+// Sponsor logo (30px tall)
+// must be in images dir
+$sponsor-logo: "Intel-Logo-White.png"; // white version of logo
+$byline-sponsor-logo: "intel-logo-blue.png"; // color version of logo
 
 @import "lib/svg";
 @import "lib/footer";
