--- a/source/stylesheets/lib/_content__social.scss
+++ b/source/stylesheets/lib/_content__social.scss
@@ -31,3 +31,32 @@ $m: content__social;
   margin: 0 .66em 0 0;
   letter-spacing: .1em;
 }
+
+// Social share links for each article
+article .nav__social {
+  float: none;
+  padding: 5% 0 1% 0;
+
+  a {
+    font-family: 'Montserrat', Verdana, Arial, sans-serif;
+    text-decoration: none;
+    color: #555;
+    text-transform: uppercase;
+    font-size: 12px;
+
+    &:hover { text-decoration: none; opacity: 0.8; }
+  }
+
+  .nav__social__link {
+    margin-right: 1.3em;
+
+    &:hover { border-bottom: none; }
+  }
+
+  .nav__social__icon { margin: 0 0.3em 0 0; vertical-align: middle; }
+
+  .nav__social__icon.twitter { fill: #55acee; }
+  .nav__social__icon.facebook { fill: #3b5998; }
+  .nav__social__icon.googleplus { fill: #dd4b39; }
+
+}
