slugs are now built from that page title

--- a/source/main.html.erb
+++ b/source/main.html.erb
@@ -1,5 +1,5 @@
 <%# Loop through all the weeks and build them here -- %>
-<% active_slug ||= 'week-0'
+<% active_slug ||= slugs.first
   weeks ||= locals[:weeks] || []
 
   # used for carousel at the bottom of the index page ------
@@ -13,9 +13,10 @@
 %>
 
 <% weeks.each_with_index do |week_data, index| %>
+  <% slug = slugs.at(index) %>
   <%= partial "partials/week_template", :locals => {:doc => week_data,
                                                     :active_slug => active_slug,
-                                                    :slug => "week-#{index}",
+                                                    :slug => slug,
                                                     :index => index,
                                                     :published_videos => videos
                                                     } %>
