Revert "Merge pull request #7 from voxmedia/slug-experiment"
This reverts commit e6982962f3602f0fe808a8a95fcdb8ddd3d8599b, reversing
changes made to 4fc4f116bb1501b4629a3f9133269bf353074dd8.

--- a/source/main.html.erb
+++ b/source/main.html.erb
@@ -1,5 +1,5 @@
 <%# Loop through all the weeks and build them here -- %>
-<% active_slug ||= slugs.first
+<% active_slug ||= 'week-0'
   weeks ||= locals[:weeks] || []
 
   # used for carousel at the bottom of the index page ------
@@ -13,10 +13,9 @@
 %>
 
 <% weeks.each_with_index do |week_data, index| %>
-  <% slug = slugs.at(index) %>
   <%= partial "partials/week_template", :locals => {:doc => week_data,
                                                     :active_slug => active_slug,
-                                                    :slug => slug,
+                                                    :slug => "week-#{index}",
                                                     :index => index,
                                                     :published_videos => videos
                                                     } %>
