--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -36,12 +36,31 @@
   <body id="scrollbox">
     <%= partial "svg/svg" %>
 
-    <nav>
+   <nav>
       <span class="nav__vertical">
+        <a class="nav__burger" href="#">☰</a>
         <a href="/">
           <svg class="nav__vertical__logo svg-icon" viewBox="0 0 474 86"><use xlink:href="#verge"></use></svg>
         </a>
       </span>
+      <ul class="menu">
+        <li><a href="#">Title of the Menu Goes Here</a></li>
+          <li><a href="#">Menu Item</a></li>
+          <li><a href="#">Menu Item</a></li>
+          <li><a href="#">Menu Item</a></li>
+          <li><a href="#">Menu Item</a></li>
+          <li><a href="#">Menu Item</a></li>
+          <li><a href="#">Menu Item</a></li>
+          <li><a href="#">Menu Item</a></li>
+          <li><a href="#">Menu Item</a></li>
+          <li><a href="#">Menu Item</a></li>
+          <li><a href="#">Menu Item</a></li>
+          <li><a href="#">Menu Item</a></li>
+          <li><a href="#">Menu Item</a></li>
+          <li><a href="#">Menu Item</a></li>
+          <li><a href="#">Menu Item</a></li>
+          <li><a href="#">Menu Item</a></li>
+      </ul>
       <%= partial 'partials/social_share' %>
       <span class="nav__label">From our sponsor</span>
     </nav>
