--- a/source/stylesheets/style.scss
+++ b/source/stylesheets/style.scss
@@ -1,3 +1,53 @@
 @import "variables";
 
 // One-off styling goes here
+
+// Hamburger Menu - will move these into a partial soon.
+ nav {
+ 	z-index: 10001;
+	 .nav__burger {
+	    @include transition (background-color ease-in-out 0.3s);
+	    display: block;
+	    height: 49px;
+	    line-height: 50px;
+	    position: absolute;
+	    left: 0;
+	    padding: 0 15px;
+	    color: white;
+	    font-size: 1.3em;
+	    //border-right: 1px solid rgba(0,0,0,0.3);
+	    &:hover {
+	      background-color: rgba(0,0,0,0.3);
+	      text-decoration: none;
+	      border-bottom: 0;
+	    }
+	    &:active {
+	      line-height: 54px;
+	    }
+	  }
+
+	  .menu {
+	    transition: all ease-in-out 0.3s;
+	    position: fixed;
+	    top: 44px;
+	    bottom: 0;
+	    height: 100%;
+	    overflow: auto;
+	    left: -100%;
+	    width: 200px;
+	    background-color: rgba($black, 0.95);
+	    border-right: 1px solid darken($black, 10%);
+	    border-bottom: 1px solid darken($black, 10%);
+	    margin: 0;
+	    padding: 1em;
+	    &.active {
+	      left: 0;
+	    }
+
+	    li {
+	    	list-style: none;
+	    	margin: 0;
+	    	padding: 0.5em 0;
+	    }
+	}
+}
