--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -44,19 +44,19 @@
         </a>
       </span>
       <ul class="menu">
-        <li><a href="#">Title of the Menu Goes Here</a></li>
+        <li class="menu-title"><a href="#">Title of the Menu Goes Here</a></li>
+          <li class="menu-heading"><a href="#">Menu Item</a></li>
           <li><a href="#">Menu Item</a></li>
           <li><a href="#">Menu Item</a></li>
           <li><a href="#">Menu Item</a></li>
+          <li class="menu-heading"><a href="#">Menu Item</a></li>
           <li><a href="#">Menu Item</a></li>
           <li><a href="#">Menu Item</a></li>
           <li><a href="#">Menu Item</a></li>
+          <li class="menu-heading"><a href="#">Menu Item</a></li>
           <li><a href="#">Menu Item</a></li>
           <li><a href="#">Menu Item</a></li>
-          <li><a href="#">Menu Item</a></li>
-          <li><a href="#">Menu Item</a></li>
-          <li><a href="#">Menu Item</a></li>
-          <li><a href="#">Menu Item</a></li>
+          <li class="menu-heading"><a href="#">Menu Item</a></li>
           <li><a href="#">Menu Item</a></li>
           <li><a href="#">Menu Item</a></li>
           <li><a href="#">Menu Item</a></li>
