--- a/source/stylesheets/style.scss
+++ b/source/stylesheets/style.scss
@@ -34,12 +34,12 @@
 	    height: 100%;
 	    overflow: auto;
 	    left: -100%;
-	    width: 200px;
-	    background-color: rgba($black, 0.95);
+	    width: 210px;
+	    background-color: #333;
 	    border-right: 1px solid darken($black, 10%);
 	    border-bottom: 1px solid darken($black, 10%);
 	    margin: 0;
-	    padding: 1em;
+	    padding: 0;
 	    &.active {
 	      left: 0;
 	    }
@@ -47,7 +47,36 @@
 	    li {
 	    	list-style: none;
 	    	margin: 0;
-	    	padding: 0.5em 0;
+	    	padding: 0.5em 1em;
+
+	    	&:hover { 
+	    		cursor: pointer;
+	    		background-color: #444;
+	    	}
+
+	    	a:hover {
+	    		text-decoration: none;
+	    		border-bottom: 0;
+	    	}
+
+	    	&.menu-title {
+	    		background-color: #000;
+	    		text-align: center;
+	    		padding: 1em;
+
+	    		a {
+	    			color: #fff;
+	    			font-weight: bold;
+	    			text-transform: uppercase;
+	    		}
+	    	}
+
+	    	&.menu-heading {
+	    		background-color: $primary;
+	    		color: #fff;
+
+	    		a { color: #fff; }
+	    	}
 	    }
 	}
 }
