Implementing slightly janky page slide transitions

--- a/source/partials/_week_template.html.erb
+++ b/source/partials/_week_template.html.erb
@@ -84,4 +84,11 @@
     <% end %>
   </section>
 
+  <footer class="footer">
+      <a href="http://voxmedia.com"> <svg class="footer__logo vox-logo" viewBox="0 0 200 72"><use xlink:href="#vox-logo"></use></svg></a>
+      <aside class="footer__text">
+        <p>This feature was produced in collaboration between <a href="http://www.voxmedia.com/media-kit/brand/vox-creative">VOX Creative</a> and <%= sponsor_name %>. The Verge editorial staff was not involved in the creation or production of this content.</p>
+        <small>&copy;<%= Time.new.year %>. Vox Media, Inc. All Rights Reserved</small>
+      </aside>
+  </footer>
 </article>
