--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -43,24 +43,7 @@
           <svg class="nav__vertical__logo svg-icon" viewBox="0 0 474 86"><use xlink:href="#verge"></use></svg>
         </a>
       </span>
-      <ul class="menu">
-        <li class="menu-title"><a href="#">Title of the Menu Goes Here</a></li>
-          <li class="menu-heading"><a href="#">Menu Item</a></li>
-          <li><a href="#">Menu Item</a></li>
-          <li><a href="#">Menu Item</a></li>
-          <li><a href="#">Menu Item</a></li>
-          <li class="menu-heading"><a href="#">Menu Item</a></li>
-          <li><a href="#">Menu Item</a></li>
-          <li><a href="#">Menu Item</a></li>
-          <li><a href="#">Menu Item</a></li>
-          <li class="menu-heading"><a href="#">Menu Item</a></li>
-          <li><a href="#">Menu Item</a></li>
-          <li><a href="#">Menu Item</a></li>
-          <li class="menu-heading"><a href="#">Menu Item</a></li>
-          <li><a href="#">Menu Item</a></li>
-          <li><a href="#">Menu Item</a></li>
-          <li><a href="#">Menu Item</a></li>
-      </ul>
+      <%= partial 'partials/hamburger_nav', :locals => {:weeks => weeks} %>
       <%= partial 'partials/social_share' %>
       <span class="nav__label">From our sponsor</span>
     </nav>
