Small styling tweaks to menu and typography

--- a/source/stylesheets/_variables.scss
+++ b/source/stylesheets/_variables.scss
@@ -24,9 +24,9 @@ $text: #555;
 $black: #000;
 
 // Typography
-$headline-font: Verdana, sans-serif;
+$headline-font: 'Source Sans Pro', Verdana, sans-serif;
 $headline-weight: normal;
-$text-font: Verdana, sans-serif;
+$text-font: 'Source Sans Pro', Verdana, sans-serif;
 $text-weight: normal;
 $font-size: 16px;
 $line-height: 1.5;
