--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -12,6 +12,7 @@
     <title><%= current_page.data.title %></title>
 
     <script type="text/javascript" src="http://fonts.sbnation.com/wvq7oai.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900italic' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     <% ooyala_player_code = 'b40f5b65292c4a6f8b3687c8670463fc' %>
