--- a/source/stylesheets/lib/_slider.scss
+++ b/source/stylesheets/lib/_slider.scss
@@ -158,6 +158,7 @@ article {
   top: 44px;
   left: 0;
   right: 0;
+  z-index: 9;
 }
 
 article.slideLeft{
@@ -178,30 +179,34 @@ article.slideRightOut{
 
 article.hidden {
   display: none;
-  /* -webkit-animation: fadeOut 0.4s ease-in-out forwards; */
 }
 
 @-webkit-keyframes slideLeft {
-  from { -webkit-transform: translateX(100%); opacity: 1; }
+  from { -webkit-transform: translateX(100%); opacity: 0.2; }
   to { -webkit-transform: translateX(0%); opacity: 1; }
 }
 
 @-webkit-keyframes slideLeftOut {
   from { -webkit-transform: translateX(0%); opacity: 1; }
-  to { -webkit-transform: translateX(-100%); opacity: 1; }
+  to { -webkit-transform: translateX(-100%); opacity: 0.2; }
 }
 
 @-webkit-keyframes slideRight {
-  from { -webkit-transform: translateX(-100%); opacity: 1; }
+  from { -webkit-transform: translateX(-100%); opacity: 0.2; }
   to { -webkit-transform: translateX(0%); opacity: 1; }
 }
 
 @-webkit-keyframes slideRightOut {
   from { -webkit-transform: translateX(0%); opacity: 1; }
-  to { -webkit-transform: translateX(100%); opacity: 1; }
+  to { -webkit-transform: translateX(100%); opacity: 0.2; }
 }
 
 @-webkit-keyframes fadeOut {
   from { opacity: 1;}
   to { opacity: 0; }
+}
+
+@-webkit-keyframes fadeIn {
+  from { opacity: 0.3;}
+  to { opacity: 1; }
 }
